[metadata]
name = rstr
version = 3.1.0
author = Leapfrog Direct Response LLC
author_email = oss@leapfrogdevelopment.com
maintainer = Brendan McCollam
maintainer_email = rstr@mccoll.am
description = Generate random strings in Python
license_files = LICENSE.txt
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/leapfrogonline/rstr
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing
keywords =
    random string
    reverse regex
    reverse regular expression
    testing
    fuzz testing
test_suite =rstr.tests.suite

[bdist_wheel]
universal=1

[options]
package_dir =
packages = rstr
python_requires = >=3.7
include_package_data = True
